--- a/PiHome/res/values/strings.xml
+++ b/PiHome/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">PiHome</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_summary">Summary</string>
 
 </resources>
