--- a/PiHome/res/values/strings.xml
+++ b/PiHome/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="floorplan">Floor Plan</string>
+    <string name="schedule">Schedule</string>
     <string name="summary">Summary</string>
-    <string name="sensors">Sensors</string>
 
 </resources>
